06-WEB/0x06-Hunt-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hunt
  labels:
    app: hunt
spec:
  ports:
    - name: http-port
      port: 5000
  selector:
    app: hunt
